# US Core 3.1.1 (Version 2) - STU311
Source - http://hl7.org/fhir/us/core/STU3.1.1/
- Removed 3.1.0 Artifacts
- Updated to 3.1.1 Artifacts STU3.1.1
- Examples are under src/test/resources/JSON/311
- Replace all narrative text with minimal placeholder for space efficiency
- Per https://github.com/IBM/FHIR/issues/1460 Relaxed required to extensible
    - https://jira.hl7.org/browse/FHIR-27911 Change binding to UCUM from required to extensible + max binding UCUM
    - Per https://chat.fhir.org/#narrow/stream/179252-IG-creation/topic/US.20Core.20QA.20Issue.20.233-.20nasty.20profiling.20error
    - Changed Required to extensible for 
        - "id": "Observation.component:FlowRate.value[x]",
        - "id": "Observation.component:Concentration.code",
- Modify MedicationRequest-uscore-mo2.json and MedicationRequest-uscore-mo2.xml to remove invalid XHTML
   - Any <p> (or other block-level element) will implicitly close any open <p>.
   - https://www.w3.org/TR/html401/struct/text.html#h-9.3.1
   - The P element represents a paragraph. It cannot contain block-level elements (including P itself).
   - Refer to https://jira.hl7.org/browse/FHIR-28409 Invalid XHTML in Examples MedicationRequest-uscore-mo2 XML/JSON
- Modify DiagnosticReport-cardiology-report JSON and XML samples contain invalid hashes https://jira.hl7.org/browse/FHIR-28408
- Add implicit-system extensions to applicable token SearchParameter definitions (performance optimization for https://github.com/IBM/FHIR/issues/1929)
- Updated Examples to point to 3.1.1 profile
- Update the StructureDefinitions and other artifacts for 3.1.1 internal references with target profiles and valueset bindings.

# US Core 4.0.0 - STU4
Source - https://www.hl7.org/fhir/us/core/stu4/
- Examples are under src/test/resources/JSON/400
- Replace all narrative text with minimal placeholder for space efficiency
- Revised Endpoint in the Practitioner endpoint so it points to relative path, not absolute path